# clique

./: BKGraph.cpp  BKGraph.hpp  CMakeLists.txt  Makefile  Makefile_old  bron_kerbosch.cpp  bron_kerbosch.h  build_cgraph.cpp  build_cgraph.h  cgraph.c  cgraph.h  clique_ext.cbp  clique_ext.depend  clique_extender.c  clique_extender.h  gmon.out  lp.cpp  lp.h  main.cpp  vint_set.c  vint_set.h
backup/: main.cpp
